[package]
name = "rusty-torrents"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
rand = "0.8.5"
bytes = "1.4.0"
bytesize = "1.3.0"
urlencoding = "2.1.3"
async-trait = "0.1.73"

tui = "0.19.0"
crossterm = "0.26.1"

sha1_smol = { version = "1.0.0", features = ["std"] }
clap = { version = "4.4.2", features = ["derive"] }
reqwest = { version = "0.11.20", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.32.0", default-features = false, features = ["rt", "rt-multi-thread", "macros", "fs", "net", "sync"] }

[profile.release]
debug = 1

[profile.dev.package.sha1_smol]
opt-level = 3
