[package]
name = "rusty-torrents"
version = "0.1.0"
authors = ["RainbowCookie32 <matimoran03@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.2"
clap = "2.33.3"
bytes = "1.0.1"
futures = "0.3.15"
reqwest = "0.11.3"
fastrand = "1.4.1"
urlencoding = "1.3.3"

async-net = "1.6.1"
async-trait = "0.1.50"

rusty-parser = { path = "../rusty-parser" }

sha1 = { version = "0.6.0", features = ["std"] }
tokio = { version = "1.6.0", features = ["rt", "rt-multi-thread", "fs", "net", "sync"] }
