[package]
name = "rusty-torrents"
version = "0.1.0"
authors = ["RainbowCookie32 <matimoran03@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.2"
rand = "0.8.4"
sha1 = "0.6.0"
clap = "2.33.3"
bytes = "1.0.1"
reqwest = "0.11.3"
urlencoding = "2.1.0"
async-trait = "0.1.50"

rusty-parser = { path = "../rusty-parser" }

tokio = { version = "1.6.0", features = ["rt", "rt-multi-thread", "macros", "fs", "net", "sync"] }
